<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:focusableInTouchMode="true"
    tools:context="com.pulsarappdev.nasamissionsinformationgrabber.MainActivity">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <EditText
        android:id="@+id/missionName"
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/missionFieldHint"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:paddingHorizontal="10dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Button
        android:id="@+id/getMission"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/getMission_button_text"
        android:onClick="getMission" />
    <Button
        android:id="@+id/testButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/testRoutine_button_text"
        android:onClick="testRoutine" />
    <CheckBox
        android:id="@+id/openLinkCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_link_checkbox_text"
        android:checked="false" />
    <CheckBox
        android:id="@+id/showDeveloperModeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disabled_developer_mode_checkbox_text"
        android:checked="false"
        android:onClick="enableDeveloperMode"/>

    <TextView
        android:id="@+id/txtCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCredits_message"/>


</LinearLayout>
